預設空白、多個Category顯示、redisplay issue、z-index

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   right: 0;
   border: 0;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.52);
-  z-index: 99999;
+  z-index: 999999999999;
 }
 /* line 10, ../sass/_contentStyle.scss */
 #LWCP-ifr.disabled {
