--- a/sass/_contentStyle.scss
+++ b/sass/_contentStyle.scss
@@ -6,7 +6,7 @@
     right: 0;
     border: 0;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.52);
-    z-index: 99999;
+    z-index: 999999999999;
     &.disabled {
         display: none !important;
     }
